v1.2

- Adding seconds label
- Adding a test alert button
- Fixing a bug where the alert was not updated when a new debuff has been reapplied

v1.1

- Fixed the cooldown frame appearing over other regular panels

v1.0

- Initial release